# tron

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  cleanup.sh  env.py  executor.py  incident_engine.py  inference.py  models.py  observations.py  openenv.yaml  oracle.py  pyproject.toml  requirements.txt  sampler.py  scenario_catalog.py  setup.sh
.github/workflows/: ci.yml
app/: nginx.conf  test_client.sh
baseline/: llm_agent.py  naive.py
eval/: demo.py  run_eval.py  seeds.yaml  summarize_results.py
graders/: __init__.py  tron_graders.py
manifests/: configmap.yaml  ingress.yaml  namespace.yaml  networkpolicy-base.yaml  nginx.yaml  redis.yaml
manifests/overlays/: README.md
scripts/: README.md  container-entrypoint.sh  install-k3s.sh  openenv_check.sh  provision-ec2.sh  space_smoke.sh
server/: __init__.py  app.py
tests/: test_baselines_and_eval.py  test_demo_flow.py  test_e2e.py  test_incident_model.py  test_inference.py  test_openenv_contract.py  test_openenv_server.py  test_runtime_loop.py  test_runtime_scaffold.py  test_support_modules.py
tron/: __init__.py  action_analysis.py  checks.py  env.py  executor.py  incident_engine.py  models.py  observations.py  oracle.py  rewards.py  runtime_setup.py  sampler.py  scenario_catalog.py
tron/scenarios/: __init__.py  common.py  compound.py  config_drift.py  deployment.py  ingress.py  network.py  probe.py  resource.py  service.py
tron_openenv/: __init__.py  client.py  models.py
tron_openenv/server/: __init__.py  app.py  environment.py
